[gd_scene load_steps=2 format=3 uid="uid://cq34ur08y4j7a"]

[ext_resource type="Script" path="res://OptionsWindow.gd" id="1"]

[node name="OptionsWindow" type="PopupPanel"]
process_mode = 3
size = Vector2i(200, 200)
visible = true
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 196.0
size_flags_horizontal = 3

[node name="Header" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.866667, 0.0666667, 1)
text = "Options"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Master Vol"

[node name="MasterVolume" type="HSlider" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.025

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
text = "SFX Vol"

[node name="SFXVolume" type="HSlider" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.025

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Music Vol"

[node name="MusicVolume" type="HSlider" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.025

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return"

[connection signal="about_to_popup" from="." to="." method="_on_OptionsWindow_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_OptionsWindow_popup_hide"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/GridContainer/MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/GridContainer/SFXVolume" to="." method="_on_SFXVolume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/GridContainer/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
